# fastapi-boilerplate-financial-brainstorm

./: .env.example  .env.test  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: CLAUDE.md  financial-knowledge.md
.claude/commands/: brainstorm.md  commit.md  plan.md  run-plan.md  scaffold.md  setup.md
.claude/rules/: api.md  infrastructure.md  migrations.md  security.md  testing.md
alembic/: env.py
docker/: Dockerfile  docker-compose.yml
scripts/: start.sh
src/: main.py  settings.py
tests/: conftest.py
